--- a/extension/public/popup.html
+++ b/extension/public/popup.html
@@ -68,8 +68,8 @@
 
     <hr />
     <footer>
-      <a href="https://golopot.github.io/tex-to-unicode/">Website</a>
-      <a href="https://github.com/golopot/tex-to-unicode/">Github</a>
+      <a href="https://chiawendt.github.io/tex-to-unicode/">Website</a>
+      <a href="https://github.com/chiawendt/tex-to-unicode/">Github</a>
     </footer>
 
     <script src="popup.js"></script>
