refactor: use vite and typescript

--- a/extension/public/popup.html
+++ b/extension/public/popup.html
@@ -53,16 +53,11 @@
     <h1>Options</h1>
     <fieldset class="options">
       <div>
-        <span
-          >Shortcut:
-          <a href="chrome://extensions/shortcuts" class="shortcut"></a
-        ></span>
+        <span>Shortcut: <a href="chrome://extensions/shortcuts" class="shortcut"></a></span>
       </div>
       <div>
         <input type="checkbox" id="option-subscripts" name="subscripts" />
-        <label for="option-subscripts"
-          >Convert subscripts and superscripts</label
-        >
+        <label for="option-subscripts">Convert subscripts and superscripts</label>
       </div>
     </fieldset>
 
