--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -39,8 +39,8 @@
             <video src="assets/out.webm" style="height: 174px" autoplay loop muted></video>
           </div>
           <p style="margin-top: 0px">
-            Convert by pressing <kbd>Alt</kbd> + <kbd>w</kbd> (or <kbd>^</kbd> + <kbd>w</kbd> on
-            Mac).
+            Convert by pressing <kbd>Alt</kbd> + <kbd>w</kbd> (or <kbd>CONTROL</kbd> +
+            <kbd>w</kbd> on Mac).
           </p>
         </div>
         <div class="container" style="margin: 60px 0">
@@ -78,7 +78,7 @@
       <h1 class="text-center">Features</h1>
       <div style="max-width: 600px; margin-left: auto; margin-right: auto; text-align: justify">
         <ul>
-          <li>Convert Tex to Unicode by pressing ALT + W (OPT + W on Mac)</li>
+          <li>Convert Tex to Unicode by pressing ALT + W (CONTROL + W on Mac)</li>
           <li>Convert underscripts and superscripts (can be enabled by an option)</li>
           <li>Works on Stack Exchange, Reddit, Wikipedia, and Gmail</li>
           <li>Convert one symbol, or convert all symbols under selection</li>
